--- a/src/styles/wot.scss
+++ b/src/styles/wot.scss
@@ -32,6 +32,11 @@ svg {
 	// }
 }
 
+.cell-info {
+	font-size: 12px;
+	font-family: sans-serif;
+	text-anchor: middle;
+}
 .render {
 	fill: rgb(138, 188, 76);
 }
