--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -66,17 +66,17 @@ button:focus-visible {
   text-align: center;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+// @media (prefers-color-scheme: light) {
+//   :root {
+//     color: #213547;
+//     background-color: #ffffff;
+//   }
 
-  a:hover {
-    color: #747bff;
-  }
+//   a:hover {
+//     color: #747bff;
+//   }
 
-  button {
-    background-color: #f9f9f9;
-  }
-}
+//   button {
+//     background-color: #f9f9f9;
+//   }
+// }
