--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -3,8 +3,8 @@
   border-radius: 15px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 
-  @media (prefers-color-scheme: light) {
-    background-color: #fff;
-    color: #213547;
-  }
+  // @media (prefers-color-scheme: light) {
+  //   background-color: #fff;
+  //   color: #213547;
+  // }
 }
