--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,10 +27,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  padding: 0;
 }
 
 h1 {
@@ -60,10 +57,11 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  // max-width: 1280px;
+  // margin: 0 auto;
+  // padding: 2rem;
+  // width: 100%;
+  // text-align: center;
 }
 
 // @media (prefers-color-scheme: light) {
