--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -1,3 +1,5 @@
+@import './mixins.scss';
+
 .card {
   background-color: #353535;
   border-radius: 15px;
@@ -7,4 +9,48 @@
   //   background-color: #fff;
   //   color: #213547;
   // }
+}
+
+
+.grid {
+  display: grid;
+  gap: 1rem;
+}
+
+.flex {
+  display: flex;
+  gap: 1rem;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.flex.hor {
+  flex-direction: row;
+}
+
+.flex.ver {
+  flex-direction: column;
+}
+
+.center-container {
+  margin: 0 auto;
+  padding: 1rem;
+
+  @include x-small {
+    max-width: calc(480px - 1rem);
+  }
+
+  @include small {
+    max-width: calc(768px - 2rem);
+  }
+
+  @include medium {
+    max-width: calc(1024px - 3rem);
+  }
+
+  @include large {
+    max-width: calc(1200px - 3rem);
+  }
 }
