--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -35,6 +35,10 @@ h1 {
   line-height: 1.1;
 }
 
+p {
+  margin: 0;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -54,14 +58,6 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-#app {
-  // max-width: 1280px;
-  // margin: 0 auto;
-  // padding: 2rem;
-  // width: 100%;
-  // text-align: center;
 }
 
 // @media (prefers-color-scheme: light) {
