--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -1,14 +1,19 @@
 @import './mixins.scss';
+@import './textColors.scss';
 
 .card {
   background-color: #353535;
   border-radius: 15px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.1);
 
   // @media (prefers-color-scheme: light) {
   //   background-color: #fff;
   //   color: #213547;
   // }
+}
+
+.text-center {
+  text-align: center;
 }
 
 
