--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -2,7 +2,7 @@
 @import './textColors.scss';
 
 .card {
-  background-color: #353535;
+  background-color: $background-secondary;
   border-radius: 15px;
   box-shadow: 0 1px 2px 0px rgba(0, 0, 0, 0.1);
 
