--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -69,6 +69,7 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
+  color: inherit;
   transition: border-color 0.25s;
 }
 
