--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,13 +7,15 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: var(--font-color);
   background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --font-color: rgba(255, 255, 255, 0.87);
 }
 
 code {
