--- a/src/styles/textColors.scss
+++ b/src/styles/textColors.scss
@@ -70,6 +70,11 @@ $background-secondary: #353535;
     margin-top: 5px;
     text-align: center;
 
+    &.top {
+      margin-top: 0;
+      margin-bottom: 5px;
+    }
+
     b {
       font-weight: var(--bold-weight);
     }
