--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: dark;
   color: var(--font-color);
   background-color: #242424;
 
