--- a/src/styles/shared.scss
+++ b/src/styles/shared.scss
@@ -16,6 +16,30 @@
   text-align: center;
 }
 
+.small-bottom-margin {
+  margin-bottom: 0em;
+}
+
+p.section-description {
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+
+.card {
+  padding: 15px;
+}
+
+.hor-ver-x-small {
+  @include less-x-small {
+    flex-direction: column;
+  }
+}
+
+.hor-ver-small {
+  @include less-small {
+    flex-direction: column;
+  }
+}
 
 .grid {
   display: grid;
