optimize shared chart

--- a/src/styles/textColors.scss
+++ b/src/styles/textColors.scss
@@ -85,7 +85,7 @@ $background-secondary: #353535;
   }
 
   &.blue {
-    color: #eff3ff;
+    color: #0A84FF;
   }
 
   &.yellow {
@@ -97,7 +97,7 @@ $background-secondary: #353535;
   }
 
   &.light-blue {
-    color: #d6fbff;
+    color: #64D2FF;
   }
 }
 
