--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -32,4 +32,20 @@ table {
       }
     }
   }
+
+  .border-left {
+    border-left: $border;
+  }
+
+  .border-right {
+    border-right: $border;
+  }
+
+  .border-top {
+    border-top: $border;
+  }
+
+  .border-bottom {
+    border-bottom: $border;
+  }
 }
