--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import './shared.scss';
+@import "./markdown.scss";
 
 :root {
   // font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
