--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -1,4 +1,4 @@
-@import './textColors.scss';
+@use './textColors.scss';
 
 $border: 1px solid rgba(240, 240, 240, 0.327);
 $bar-color: #8181813e;
@@ -23,11 +23,11 @@ table {
         animation: shine 1.8s infinite linear;
         border-radius: 5px;
 
-        @keyframes shine {
-          to {
-            background-position: -200% 0;
-          }
-        }
+        // @keyframes shine {
+        //   to {
+        //     background-position: -200% 0;
+        //   }
+        // }
       }
     }
   }
