--- a/src/styles/textColors.scss
+++ b/src/styles/textColors.scss
@@ -1,5 +1,4 @@
-$background-color: #242424;
-$background-secondary: #353535;
+@use './variables.scss' as *;
 
 @mixin effect($blur-radius) {
 
@@ -106,11 +105,11 @@ $background-secondary: #353535;
   background-size: 200% 100%;
   animation: shine 1.8s infinite linear;
 
-  @keyframes shine {
-    to {
-      background-position: -200% 0;
-    }
-  }
+  // @keyframes shine {
+  //   to {
+  //     background-position: -200% 0;
+  //   }
+  // }
 }
 
 .text-effect {
