--- a/src/styles/textColors.scss
+++ b/src/styles/textColors.scss
@@ -104,12 +104,13 @@
   background: linear-gradient(90deg, $color 8%, $highlight-color 18%, $color 33%);
   background-size: 200% 100%;
   animation: shine 1.8s infinite linear;
+  background-position: 100% 0;
 
-  // @keyframes shine {
-  //   to {
-  //     background-position: -200% 0;
-  //   }
-  // }
+  @keyframes shine {
+    to {
+      background-position: -100% 0;
+    }
+  }
 }
 
 .text-effect {
@@ -148,7 +149,9 @@
   }
 
   &.loading {
-    @include text-skeleton(var(--font-color), #b8b8b8);
+    @include text-skeleton(var(--font-color), #787878);
+    animation-delay: 0.5s;
+    animation-duration: 3s;
     color: transparent;
     background-clip: text;
     -moz-background-clip: text;
