--- a/src/components/reusableTable/reusableTable.scss
+++ b/src/components/reusableTable/reusableTable.scss
@@ -20,10 +20,33 @@
 
     overflow-y: auto;
     overflow-x: hidden;
+    overscroll-behavior: contain;
 
     .wrapper {
-      background: var(--background-color, #480039);
+      // background: var(--background-color, #480039);
       will-change: transform;
+    }
+
+    .section {
+      position: relative;
+      box-sizing: border-box;
+
+      .header-container,
+      .footer-container {
+        position: absolute;
+        left: 0;
+        right: 0;
+      }
+
+      .header-container {
+        top: 0;
+      }
+
+      .footer-container {
+        bottom: 0;
+        display: flex;
+        flex-direction: column-reverse;
+      }
     }
   }
 }
