--- a/src/components/reusableTable/reusableTable.scss
+++ b/src/components/reusableTable/reusableTable.scss
@@ -21,6 +21,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     overscroll-behavior: contain;
+    isolation: isolate;
 
     .wrapper {
       will-change: transform;
@@ -45,11 +46,6 @@
         bottom: 0;
         display: flex;
         flex-direction: column-reverse;
-      }
-
-      .content-container {
-        position: relative;
-        z-index: -2;
       }
     }
   }
