--- a/src/components/reusableTable/reusableTable.scss
+++ b/src/components/reusableTable/reusableTable.scss
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     pointer-events: none;
-    z-index: -1;
+    z-index: -2;
 
     contain: strict;
     background: var(--background-color, #480039);
@@ -14,6 +14,7 @@
     overflow: hidden;
 
     opacity: 1;
+    background-color: #480039;
   }
 
   .scroll {
@@ -32,7 +33,7 @@
 
     .section {
       .content-container {
-        background-color: rgba(102, 51, 153, 0.156);
+        background-color: var(--background-color, #900071);
       }
     }
   }
