--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,6 +23,7 @@
   --background-color: #{variables.$background-color};
   --blue-color: #0A84FFFF;
   --blue-thin-color: rgb(0, 153, 255);
+  --blue-thin-color-hover: rgb(48, 172, 255);
 
 
   body {
