--- a/src/components/tableView/tableView/reusableTable.scss
+++ b/src/components/tableView/tableView/reusableTable.scss
@@ -39,6 +39,7 @@
       .sticky-background-fixer {
         position: absolute;
         inset: 0;
+        pointer-events: none;
 
         .header-background {
           position: absolute;
@@ -85,6 +86,39 @@
         bottom: 0;
         display: flex;
         flex-direction: column-reverse;
+      }
+
+      .content-container {
+        position: relative;
+      }
+    }
+  }
+
+  .default-line-style {
+
+    &.cell-line {
+      height: 35px;
+      z-index: 1;
+      display: flex;
+      align-items: center;
+      padding: 0 10px;
+      border-radius: 4px;
+
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+      }
+    }
+
+    &.header-line {
+      height: 20px;
+      z-index: 2;
+      padding: 10px 10px 3px 10px;
+      height: 20px;
+
+      h5 {
+        margin: 0;
+        padding: 0;
+        line-height: 1;
       }
     }
   }
